--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.html",
   "scripts": {
     "lite": "lite-server",
+    "scss": "node-sass -o css/ css/",
     "start": "npm run lite",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -16,6 +17,7 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
     "lite-server": "^2.6.1",
+    "node-sass": "^5.0.0",
     "popper.js": "^1.16.1"
   }
 }
